--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,12 @@ dependencies:
   image_picker: ^0.8.6
   shared_preferences: ^2.0.15
   flutter_custom_clippers: ^2.1.0
-  flutter_bloc: ^8.1.1
-  equatable: ^2.0.5
+  json_annotation: ^4.8.0
+  fluttertoast: ^8.1.2
+  email_validator: ^2.1.17
+  logger: ^1.1.0
+  sizer: ^2.0.15
+  animated_bottom_navigation_bar: ^1.1.0+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -58,17 +62,16 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Nunito
+      fonts:
+        - asset: assets/fonts/Nunito/Nunito-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Nunito/Nunito-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Nunito/Nunito-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Nunito/Nunito-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Nunito/Nunito-Bold.ttf
+          weight: 700
