--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,11 @@ dependencies:
   logger: ^1.1.0
   sizer: ^2.0.15
   animated_bottom_navigation_bar: ^1.1.0+1
+  permission_handler: ^10.2.0
+  device_info_plus: ^8.1.0
+  http: ^0.13.5
+  path_provider: ^2.0.12
+  flutter_easyloading: ^3.0.5
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -49,6 +54,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
+    - assets/img/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
